--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="./style.css">
+
+	<title>NBA Player Search</title>
 </head>
 <body>
 	<div class="container">
     <h1>Search For Your Favorite NBA Player!</h1>
 
-    <!-- Buttons will get dumped here -->
+
     <div id="player-holder"></div>
 
     <form id="player-form">
       <label for="player-input">Search For Your Favorite NBA Player!</label>
       <input type="text" id="player-input"><br>
 
-      <!-- Button triggers new movie to be added -->
+
       <input id="add-player" type="submit" value="Search For An NBA Player!">
 		</form>
 
@@ -27,7 +30,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript">
-var players = [];
+var players = ["Lebron James", "Kevin Durant"];
 
 function displayPlayers() {
 			var person = $(this).attr("data-name");
@@ -56,7 +59,7 @@ function displayPlayers() {
 
 						var p = $("<p>").text("Rating: " + rating);
 
-						var personImage = $("<img>");
+						var personImage = $('<img class="gif">');
 
 						personImage.attr("src", results[i].images.fixed_height.url);
 
@@ -74,7 +77,7 @@ function displayPlayers() {
 			}				
 function renderButtons() {
 
-	$("player-holder").empty();
+	$("#player-holder").empty();
 
 	for (var i = 0; i < players.length; i++) {
 
@@ -88,7 +91,6 @@ function renderButtons() {
 
 	$("#player-holder").append(a);
 
-	$("#buttons-view").empty();
 	
 	}
 }
@@ -107,6 +109,20 @@ $("#add-player").on("click", function(event) {
 $(document).on("click", ".player-btn", displayPlayers);
 
  renderButtons();
+
+    $('body').on('click', '.gif', function() {
+    	var src = $(this).attr("src");
+      if($(this).hasClass('playing')){
+         //stop
+         $(this).attr('src', src.replace(/\.gif/i, "_s.gif"))
+         $(this).removeClass('playing');
+      } else {
+        //play
+        $(this).addClass('playing');
+        $(this).attr('src', src.replace(/\_s.gif/i, ".gif"))
+      }
+    });
+
 
  </script>
 </body>
